--- a/isomorphic-alt/package.json
+++ b/isomorphic-alt/package.json
@@ -13,5 +13,8 @@
       "envify"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "socket.io": "^1.3.3",
+    "socket.io-client": "^1.3.3"
+  }
 }
