--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
-    "reflux": "^0.2.4"
+    "reflux": "^0.2.4",
+    "socket.io": "^1.3.3",
+    "socket.io-client": "^1.3.3"
   },
   "devDependencies": {
     "6to5": "^3.3.4",
